seldon-deploy-install/prerequisites-setup/efk/kibana-virtualservice-kubeflow.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana
  namespace: seldon-logs
spec:
  gateways:
    - kubeflow/kubeflow-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /kibana/
      rewrite:
        uri: /
      route:
        - destination:
            host: elasticsearch-opendistro-es-kibana-svc
            port:
              number: 443
